@@ -38,6 +38,11 @@ public class EvaporationSlider extends ControlPanelNode {
                 addMouseListener( new MouseAdapter() {
                     @Override public void mouseReleased( MouseEvent e ) {
                         evaporationRate.set( 0 );
+
+                        //To make sure the slider goes back to zero, it is essential to set the value to something other than zero first
+                        //Just calling setValue(0) here or waiting for the callback from the model doesn't work if the user was dragging the knob
+                        setValue( 1 );
+                        setValue( 0 );
                     }
                 } );
             }} ) );
