@@ -72,7 +72,13 @@ public class FaucetNode extends PNode {
                 //Set the flow back to zero when the user lets go, the user has to hold the slider to keep the faucet on
                 addMouseListener( new MouseAdapter() {
                     @Override public void mouseReleased( MouseEvent e ) {
+                        //Turn off the flow level
                         faucetFlowLevel.set( 0.0 );
+
+                        //To make sure the slider goes back to zero, it is essential to set the value to something other than zero first
+                        //Just calling setValue(0) here or waiting for the callback from the model doesn't work if the user was dragging the knob
+                        setValue( 1 );
+                        setValue( 0 );
                     }
                 } );
             }} ) {{
